# Google-Reverse-Image-Search

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/google_img_source_search/: __init__.py  api_response_parser.py  batchexecute_decoder.py  exceptions.py  f_req_template.py  image_file_uploader.py  image_source_searcher.py  image_uploader.py  reverse_image_searcher.py  safe_modes.py
src/google_img_source_search/google_items/: image.py  search_item.py
tests/: test_upload_local.py  tests_reverse_image_searcher.py
